Fixed text wrap issue in nav item.

--- a/css/style.css
+++ b/css/style.css
@@ -511,15 +511,16 @@ body {
   background-image: radial-gradient(#7ed56f, #28b485);
   z-index: 100;
   box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.1);
-  transition: transform 0.8s cubic-bezier(0.58, -0.01, 0.33, 1.02); }
+  transition: transform 8s cubic-bezier(0.58, -0.01, 0.33, 1.02); }
 
 .navigation__nav {
   height: 100vh;
   position: fixed;
   top: 0;
-  left: 0;
+  right: 0;
   z-index: 150;
-  transition: all 0.8s cubic-bezier(0.39, 1.51, 0.72, 0.81);
+  transition: all 8s cubic-bezier(0.39, 1.51, 0.72, 0.81);
+  white-space: nowrap;
   opacity: 0;
   width: 0; }
 
